--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,14 +3,16 @@ server.port=8081
 
 # postgresql database configuration
 #data spurce url
+spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/scm20
-spring.datasource.username=root
+spring.datasource.username=postgres
 spring.datasource.password=root1234
 
 #jpa configurations
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
 # for creating schemas and tables
+spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
 
